--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.45",
+    "axios": "^1.6.7",
     "busboy": "^1.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
