--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "busboy": "^1.6.0",
     "express": "^4.18.2",
+    "mjpeg-camera": "^2.0.1",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.2",
     "skia-canvas": "^1.0.1"
