--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mjpeg-camera": "^2.0.1",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.2",
-    "skia-canvas": "^1.0.1"
+    "skia-canvas": "^1.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
